# rust-sorting

./: Cargo.toml  LICENSE  README.md  benchmark.py  example.py  on_key.py  publish_to_gh-pages.sh  rust_sorting.py  search-index.js
benchmark/: bubblesort.txt  heapsort.txt  insertionsort.txt  mergesort.txt  quicksort.txt  selectionsort.txt  sort.txt
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Copy.js
rand/: fn.random.html  fn.sample.html  fn.thread_rng.html  fn.weak_rng.html  struct.AsciiGenerator.html  struct.Closed01.html  struct.Generator.html  struct.Open01.html  struct.StdRng.html  struct.ThreadRng.html  struct.XorShiftRng.html  trait.Rand.html  trait.Rng.html  trait.SeedableRng.html
rand/read/: index.html  struct.ReadRng.html
sorting/: fn.ffi_sort_i16.html  fn.ffi_sort_i32.html  fn.ffi_sort_i64.html  fn.ffi_sort_i8.html  fn.ffi_sort_u16.html  fn.ffi_sort_u32.html  fn.ffi_sort_u64.html  fn.ffi_sort_u8.html  index.html  sidebar-items.js
sorting/efficientsorts/: index.html  sidebar-items.js
sorting/efficientsorts/heap/: fn.ffi_heapsort_f32.html  fn.ffi_heapsort_f64.html  fn.ffi_heapsort_i16.html  fn.sort.html  (+9 more)
sorting/simplesorts/: index.html  sidebar-items.js
src/: lib.rs  simplesorts.rs
src/efficientsorts/: heap.rs  merge.rs  mod.rs  quick.rs
src/libc/: lib.rs.html
src/rand/: chacha.rs.html  isaac.rs.html  lib.rs.html  os.rs.html  rand_impls.rs.html  read.rs.html  reseeding.rs.html
src/simplesorts/: bubble.rs  insertion.rs  insertion_sort.rs  mod.rs  selection.rs
src/sorting/: lib.rs.html
tests/: lib.rs
(+82 files in other folders)
