[package]
name = "sorting"
version = "0.2.0"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]

description = "Sorting algorithms implementation in Rust."
homepage = "https://github.com/nbigaouette/rust-sorting"
repository = "https://github.com/nbigaouette/rust-sorting.git"
readme = "README.md"

keywords = ["sort", "sorting"]

license = "BSD-3-Clause"

[lib]
name = "sorting"
crate-type = ["dylib", "rlib"]

[dependencies]
rand = "0.3"
libc = "0.1.10"
